fixed z-index for modal/condition for displaying theme switcher

--- a/assets/styles/main.css
+++ b/assets/styles/main.css
@@ -700,7 +700,7 @@ form > :last-child {
 	justify-content: center;
 	align-items: center;
 	margin: auto;
-	z-index: 100;
+	z-index: 1001;
 	background-color: rgba(0, 0, 0, 0.8);
 	opacity: 0;
 	transition: opacity 0.15s linear;
